# bar-tracker-firmware

./: CMakeLists.txt  bar_tracker.gatt  ble_peripheral.cpp  ble_peripheral.hpp  btstack_config.h  config.hpp  main.cpp  mpu6050.cpp  mpu6050.hpp
.github/workflows/: build-firmware.yml
